[gd_scene load_steps=17 format=3 uid="uid://dflivhdntu4is"]

[ext_resource type="Script" uid="uid://dcnheqacsifth" path="res://scenes/gameScene/GameScene.gd" id="1_lt3k6"]
[ext_resource type="Texture2D" uid="uid://dupenvyh7rvcj" path="res://assets/background/gameScene.png" id="2_hqpne"]
[ext_resource type="Texture2D" uid="uid://dwe0vy25mdyly" path="res://assets/persons/player.png" id="3_y6mo2"]
[ext_resource type="FontFile" uid="uid://bin23umv2teyt" path="res://fonts/PressStart2P.ttf" id="4_hqpne"]
[ext_resource type="Texture2D" uid="uid://bhfs3jtk4117q" path="res://assets/gui/dices.png" id="5_y6mo2"]
[ext_resource type="AudioStream" uid="uid://yyseapyb3o0s" path="res://assets/sounds/roll_dice.mp3" id="6_2vhme"]
[ext_resource type="PackedScene" uid="uid://dhxigtd1x13wa" path="res://components/gameConfig/topBar/TopBar.tscn" id="7_f025n"]
[ext_resource type="PackedScene" uid="uid://d1qabh0lfjxrd" path="res://components/gameConfig/bottomBar/BottomBar.tscn" id="8_uwdde"]

[sub_resource type="LabelSettings" id="LabelSettings_0l4ed"]
font = ExtResource("4_hqpne")
font_size = 12

[sub_resource type="AtlasTexture" id="AtlasTexture_2vhme"]
atlas = ExtResource("5_y6mo2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f025n"]
atlas = ExtResource("5_y6mo2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwdde"]
atlas = ExtResource("5_y6mo2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l4ed"]
atlas = ExtResource("5_y6mo2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_duws1"]
atlas = ExtResource("5_y6mo2")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kd1u7"]
atlas = ExtResource("5_y6mo2")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jqjyr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vhme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f025n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwdde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l4ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duws1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kd1u7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="ProfileScene" type="Node2D"]
script = ExtResource("1_lt3k6")

[node name="GameScene" type="Sprite2D" parent="."]
position = Vector2(576, 356.125)
scale = Vector2(1.125, 0.570068)
texture = ExtResource("2_hqpne")

[node name="Enemy" type="Sprite2D" parent="."]
position = Vector2(540, 312)
scale = Vector2(0.571575, 0.51282)
texture = ExtResource("3_y6mo2")

[node name="EnemyRollTimer" type="Timer" parent="."]
one_shot = true

[node name="StartNewRoundTimer" type="Timer" parent="."]
one_shot = true

[node name="RoundResultLabel" type="Label" parent="."]
offset_left = 498.0
offset_top = 454.0
offset_right = 588.0
offset_bottom = 477.0
text = "Result label"

[node name="ActiveRoundLabel" type="Label" parent="."]
offset_left = 34.0
offset_top = 473.0
offset_right = 210.0
offset_bottom = 524.0
text = "Current Round"
label_settings = SubResource("LabelSettings_0l4ed")

[node name="Dice1" type="AnimatedSprite2D" parent="."]
position = Vector2(462, 440)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_jqjyr")

[node name="Dice2" type="AnimatedSprite2D" parent="."]
position = Vector2(634, 438)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_jqjyr")

[node name="DiceRollSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2vhme")

[node name="WinRoundSound" type="AudioStreamPlayer2D" parent="."]

[node name="TieRoundSound" type="AudioStreamPlayer2D" parent="."]

[node name="LoseRoundSound" type="AudioStreamPlayer2D" parent="."]

[node name="LeaveRoomButton" type="Button" parent="."]
offset_left = 114.0
offset_top = 303.0
offset_right = 217.0
offset_bottom = 345.0
text = "Leave Room"

[node name="TopBar" parent="." instance=ExtResource("7_f025n")]

[node name="BottomBar" parent="." instance=ExtResource("8_uwdde")]
position = Vector2(0, 584)

[connection signal="timeout" from="EnemyRollTimer" to="." method="_on_enemy_roll_timer_timeout"]
[connection signal="timeout" from="StartNewRoundTimer" to="." method="_on_start_new_round_timer_timeout"]
